# felix

./: .env.example  .gitignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
felix/: controllers.py  entrypoint.sh  main.py
felix/controller/: __init__.py  interfaces.py
felix/core/: engine_factories.py  engines.py
felix/core/database/: __init__.py  session.py
felix/core/engine_components/database_components/: interfaces.py
felix/core/engine_components/economy_component/: __init__.py  economy.py  interfaces.py  pet_balance.py
felix/core/engine_components/health_component/: __init__.py  health.py  interfaces.py
felix/core/general/: __init__.py
felix/core/objects/: __init__.py
felix/core/tools/: __init__.py
felix/telegram/: __init__.py  bot.py  commands_controller.py  controller.py  events.py  flask.py  handlers.py  listeners.py  messages.json  messages.py  webhooks.py
felix/telegram/bot/: __init__.py  bot.py  controller.py  events.py  handlers.py  messages.py
felix/telegram/controllers/: __init__.py  economy.py  pets.py  settings.py  start.py
felix/telegram/handlers/: economy.py  pets.py  settings.py  start.py
felix/telegram/listeners/: __init__.py  pets.py
felix/telegram/templates/: base.html  example.html
nginx/: Dockerfile  nginx.conf
tests/: test_example.py
tests/test_core/test_engine_components/: test_health.py  test_pets.py
tests/test_core/test_objects/: test_dependency_injector.py  test_observable.py
tests/test_core/test_tools/: test_dependency_injector.py  test_observable.py
(+59 files in other folders)
